--- a/editando_capa.htm
+++ b/editando_capa.htm
@@ -186,7 +186,8 @@ input {
       <p align="right">&nbsp;</p>
       <p align="right">
       <img src="https://dl.dropboxusercontent.com/s/rknq0zu9ly0xunj/LogoUnidecristo.png" width="90" height="90">&nbsp;&nbsp;&nbsp;&nbsp;
-      <td width="15" height="750" align="center" valign="top" style="border-style:none; border-width:medium; padding-left:1; padding-right:1">
+       <td width="15" height="750" align="center" valign="top" style="border-style:dotted; border-width:1; padding-left:1; padding-right:1">
+
       
       
 
