--- a/galeria_de_imagens.htm
+++ b/galeria_de_imagens.htm
@@ -91,7 +91,13 @@
 <img src="http://unidecristo.arquivocristao.com.br/images/78.png" width="220" height="187">
 <img src="http://unidecristo.arquivocristao.com.br/images/79.png" width="220" height="187">
 <img src="http://unidecristo.arquivocristao.com.br/images/80.png" width="220" height="187">
-
+<img src="http://unidecristo.arquivocristao.com.br/images/81.png" width="220" height="187">
+<img src="http://unidecristo.arquivocristao.com.br/images/82.png" width="220" height="187">
+<img src="http://unidecristo.arquivocristao.com.br/images/83.png" width="220" height="187">
+<img src="http://unidecristo.arquivocristao.com.br/images/84.png" width="220" height="187">
+<img src="http://unidecristo.arquivocristao.com.br/images/85.png" width="220" height="187">
+<img src="http://unidecristo.arquivocristao.com.br/images/86.png" width="220" height="187">
+<img src="http://unidecristo.arquivocristao.com.br/images/87.png" width="220" height="187">
 </p>
 
 </body>
