--- a/cidades.htm
+++ b/cidades.htm
@@ -1,26 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Cidade/Estado</title>
-<script type="text/javascript" src="http://cidades-estados-js.googlecode.com/files/cidades-estados-v0.2.js"></script>
-</head>
-
-<body>
-
-
 <script type="text/javascript">
-window.onload = function() {
-new dgCidadesEstados(document.getElementById('estado'), document.getElementById('cidade'), true);
-}
-</script>
-
-
-<select id="estado" name="estado"></select>
-
-<select id="cidade" name="cidade"></select>
-
-
-</body>
-
-</html>
+      	$(document).ready(function(){   
+         	$("select[name=estado]").change(function(){
+            	$("select[name=cidade]").html('<option value="0">Carregando...</option>');
+            	$.post("cidades.php",
+                  	{estado:$(this).val()},
+                   	function(valor){
+                      	$("select[name=cidade]").html(valor);
+                  	}
+                  	)
+         	})
+			 
+         	$("select[name=cidade]").change(function(){
+            	$("select[name=bairro]").html('<option value="0">Carregando...</option>');
+            	$.post("bairros.php",
+                  	{cidade:$(this).val()},
+                   	function(valor){
+                      	$("select[name=bairro]").html(valor);
+                  	}
+                  	)
+         	})			 
+      	})
+	</script>
