--- a/galeria_de_imagens.htm
+++ b/galeria_de_imagens.htm
@@ -11,93 +11,93 @@
 <body>
 
 <p align="center">
-<img src="http://unidecristo.arquivocristao.com.br/images/1.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/2.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/3.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/4.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/5.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/6.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/7.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/8.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/9.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/10.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/11.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/12.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/13.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/14.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/15.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/16.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/17.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/18.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/19.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/20.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/21.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/22.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/23.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/24.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/25.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/26.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/27.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/28.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/29.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/30.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/31.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/32.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/33.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/34.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/35.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/36.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/37.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/38.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/39.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/40.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/41.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/42.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/43.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/44.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/45.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/46.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/47.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/48.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/49.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/50.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/51.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/52.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/53.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/54.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/55.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/56.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/57.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/58.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/59.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/60.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/61.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/62.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/63.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/64.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/65.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/66.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/67.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/68.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/69.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/70.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/71.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/72.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/73.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/74.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/75.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/76.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/77.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/78.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/79.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/80.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/81.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/82.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/83.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/84.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/85.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/86.png" width="220" height="187">
-<img src="http://unidecristo.arquivocristao.com.br/images/87.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/1.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/2.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/3.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/4.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/5.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/6.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/7.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/8.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/9.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/10.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/11.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/12.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/13.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/14.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/15.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/16.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/17.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/18.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/19.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/20.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/21.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/22.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/23.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/24.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/25.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/26.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/27.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/28.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/29.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/30.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/31.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/32.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/33.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/34.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/35.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/36.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/37.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/38.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/39.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/40.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/41.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/42.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/43.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/44.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/45.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/46.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/47.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/48.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/49.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/50.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/51.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/52.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/53.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/54.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/55.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/56.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/57.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/58.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/59.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/60.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/61.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/62.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/63.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/64.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/65.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/66.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/67.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/68.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/69.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/70.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/71.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/72.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/73.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/74.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/75.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/76.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/77.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/78.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/79.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/80.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/81.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/82.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/83.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/84.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/85.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/86.png" width="220" height="187">
+<img src="http://www.livropublicado.com.br/images/87.png" width="220" height="187">
 </p>
 
 </body>
