--- a/gerandotexto.htm
+++ b/gerandotexto.htm
@@ -18,43 +18,80 @@
   Fonte&nbsp;&nbsp;&nbsp; <select size="1" name="a5">
 
 
+<option>Akronim</option>
 <option>Alex Brush</option>
 <option>Alfa Slab One</option>
 <option>Allerta Stencil</option>
 <option>Anton</option>
 <option>Archivo Black</option>
+<option>Asset</option>
 <option>Audiowide</option>
 <option>Bangers</option>
 <option>Bevan</option>
 <option>Black Ops One</option>
+<option>Bowlby One SC</option>
+<option>Bungee Inline</option>
+<option>Bungee Outline</option>
 <option>Bungee shade</option>
 <option>Bungee</option>
+<option>Butcherman</option>
 <option>Cabin Sketch</option>
 <option>Calligraffitti</option>
 <option>Ceviche One</option>
+<option>Chango</option>
 <option>Chewy</option>
+<option>Codystar</option>
 <option>Coiny</option>
 <option>Crafty Girls</option>
 <option>Creepster</option>
+<option>Diplomata SC</option>
+<option>Diplomata</option>
+<option>Eagle Lake</option>
 <option>Ewert</option>
+<option>Fascinate Iline</option>
+<option>Fascinate</option>
+<option>Faster One</option>
+<option>Finger Paint</option>
+<option>Flavors</option>
 <option>Freckle Face</option>
 <option>Fredoka One</option>
+<option>Frijole</option>
 <option>Fruktur</option>
 <option>Gloria Hallelujah</option>
 <option>Great Vibes</option>
+<option>Hanalei Fill</option>
+<option>Hanalei</option>
 <option>Handlee</option>
+<option>Holtwood One SC</option>
+<option>Iceberg</option>
 <option>Kaushan Script</option>
 <option>Kavoon</option>
+<option>Kumar One Outline</option>
+<option>Kumar One</option>
+<option>Lemon</option>
 <option>Lobster Two</option>
+<option>Londrina Outline</option>
+<option>Londrina Shadow</option>
 <option>Luckiest Guy</option>
+<option>Meddon</option>
 <option>Merienda One</option>
+<option>Merienda</option>
+<option>Miltonian Tattoo</option>
+<option>Miltonian</option>
+<option>Modak</option>
+<option>Molle</option>
 <option>Monoton</option>
+<option>Mystery Quest</option>
+<option>New Rocker</option>
 <option>Niconne</option>
+<option>Nosifer</option>
 <option>Oleo Script</option>
 <option>Orbriton</option>
 <option>Parisienne</option>
 <option>Patua One</option>
 <option>Permanent Marker</option>
+<option>Piedra</option>
+<option>Plaster</option>
 <option>Poiret One</option>
 <option>Racing Sans One</option>
 <option>Rammetto One</option>
@@ -62,17 +99,28 @@
 <option>Rock Salt</option>
 <option>Ruslan Display</option>
 <option>Russo One</option>
+<option>Ruthie</option>
+<option>Rye</option>
 <option>Sacramento</option>
+<option>Sancreek</option>
 <option>Satisfy</option>
+<option>Shojumaru</option>
 <option>Shrikhand</option>
 <option>Sigmar One</option>
 <option>Six Caps</option>
+<option>Slackey</option>
 <option>Special Elite</option>
+<option>Syncopate</option>
 <option>Tangerine</option>
+<option>Trade Winds</option>
 <option>Ultra</option>
+<option>Uncial Anciqua</option>
+<option>Vast Shadow</option>
+<option>Wallpoet</option>
 <option>Walter Turncoat</option>
 <option>Wendy One</option>
 <option>Yellowtail</option>
+<option>Yeseva One</option>
 
 </select></p>
 
