--- a/gerandotexto.htm
+++ b/gerandotexto.htm
@@ -4,7 +4,7 @@
 <title>Gerando Texto</title>
 <base target="_blank">
 
-<form name='formulario' method='get' action='/gerandotexto.php'>
+<form name='formulario' method='get' action='http://baixargospelfacil.esy.es/gerandotexto.php'>
   <p align="center">
   &nbsp;</p>
 
@@ -15,7 +15,7 @@
 
 
   <p align="center">
-  Fonte&nbsp;&nbsp;&nbsp; <select size="1" name="a5">
+  Fonte&nbsp;&nbsp;&nbsp; <select size="1" name="a2" style="color: #800000; font-weight: bold">
 
 
 <option>Akronim</option>
@@ -127,12 +127,12 @@
 
   <p align="center">
   cor&nbsp;&nbsp;&nbsp;
-  <input type="text" name="a2" size="45" style="color: #800000; font-weight: bold"></p>
+  <input type="text" name="a3" size="45" style="color: #800000; font-weight: bold"></p>
 
 
   <p align="center">
   Tamanho&nbsp;&nbsp;&nbsp;
-  <input type="text" name="a4" size="16" style="font-weight: bold" value="60"></p>
+  <input type="text" name="a4" size="16" style="color: #800000; font-weight: bold" value="60"></p>
 
 
   <p align="center">
