--- a/gerandotexto.htm
+++ b/gerandotexto.htm
@@ -1,8 +1,9 @@
 <html>
-
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <title>Gerando Texto</title>
-<base target="_blank">
+
+<base target="mostra">
 
 <form name='formulario' method='get' action='http://baixargospelfacil.esy.es/gerandotexto.php'>
   <p align="center">
@@ -146,15 +147,15 @@
    </form>
 </p>
 <p align="center">
-<p align="center"><b><font size="4">Em texto você escreve a palavra que desejar</font></b></p>
-<p align="center"><b><font size="4">Em fonte escolha o nome na opção veja os 
+<p align="center"><b><font size="4">Em texto você escreve a palavra que desejar 
+| Em fonte escolha o nome na opção veja os 
 exemplos abaixo</font></b></p>
 <p align="center"><b><font size="4">Em cor você pode colocar o nome, o numero ou 
 o código da cor 
-da lista abaixo </font></b></p>
-<p align="center"><b><font size="4">Em tamanho digite o tamanho da fonte </font></b></p>
-<p align="center">&nbsp;</p>
-<p align="center">&nbsp;</p>
+da lista abaixo | Em tamanho digite o tamanho da fonte </font></b></p>
+<p align="center">
+<iframe name="mostra" width="1189" height="141" border="0" frameborder="0">
+</iframe></p>
 <p align="center">
 <iframe name="I1" width="500" height="350" src="http://www.livropublicado.com.br/fontes.htm" border="0" frameborder="0">
 </iframe>
