--- a/gerandotexto.htm
+++ b/gerandotexto.htm
@@ -5,18 +5,27 @@
 
 <base target="mostra">
 
-<form name='formulario' method='get' action='http://baixargospelfacil.esy.es/gerandotexto.php'>
+
+<div align="center">
+  <center>
+  <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="50%">
+    <tr>
+      <td width="100%" background="http://www.armor-chimie.fr/IMG/jpg/ORANGE_DEVES_1233.jpg">
+      <p align="center"><form name='formulario' method='get' action='http://baixargospelfacil.esy.es/gerandotexto.php'>
   <p align="center">
   &nbsp;</p>
 
 
   <p align="center">
-  Texto
-  <input type="text" name="a1" size="46" style="color: #800000; font-weight: bold"></p>
+  <b><font size="5" color="#FFFFFF">Texto:</font></b></p>
 
 
   <p align="center">
-  Fonte&nbsp;&nbsp;&nbsp; <select size="1" name="a2" style="color: #800000; font-weight: bold">
+  &nbsp;<input type="text" name="a1" size="56" style="color: #800000; font-weight: bold"></p>
+
+
+  <p align="center">
+  <b><font size="4" color="#FFFFFF">Fonte:</font></b> <select size="1" name="a2" style="color: #800000; font-weight: bold">
 
 
 <option>Akronim</option>
@@ -47,6 +56,121 @@
 <option>Creepster</option>
 <option>Diplomata SC</option>
 <option>Diplomata</option>
+<option>Eagle Lake</option>
+<option>Ewert</option>
+<option>Fascinate Iline</option>
+<option>Fascinate</option>
+<option>Faster One</option>
+<option>Finger Paint</option>
+<option>Flavors</option>
+<option>Freckle Face</option>
+<option>Fredoka One</option>
+<option>Frijole</option>
+<option>Fruktur</option>
+<option>Gloria Hallelujah</option>
+<option>Great Vibes</option>
+<option>Hanalei Fill</option>
+<option>Hanalei</option>
+<option>Handlee</option>
+<option>Holtwood One SC</option>
+<option>Iceberg</option>
+<option>Kaushan Script</option>
+<option>Kavoon</option>
+<option>Kumar One Outline</option>
+<option>Kumar One</option>
+<option>Lemon</option>
+<option>Lobster Two</option>
+<option>Londrina Outline</option>
+<option>Londrina Shadow</option>
+<option>Luckiest Guy</option>
+<option>Meddon</option>
+<option>Merienda One</option>
+<option>Merienda</option>
+<option>Miltonian Tattoo</option>
+<option>Miltonian</option>
+<option>Modak</option>
+<option>Molle</option>
+<option>Monoton</option>
+<option>Mystery Quest</option>
+<option>New Rocker</option>
+<option>Niconne</option>
+<option>Nosifer</option>
+<option>Oleo Script</option>
+<option>Orbriton</option>
+<option>Parisienne</option>
+<option>Patua One</option>
+<option>Permanent Marker</option>
+<option>Piedra</option>
+<option>Plaster</option>
+<option>Poiret One</option>
+<option>Racing Sans One</option>
+<option>Rammetto One</option>
+<option>Righteous</option>
+<option>Rock Salt</option>
+<option>Ruslan Display</option>
+<option>Russo One</option>
+<option>Ruthie</option>
+<option>Rye</option>
+<option>Sacramento</option>
+<option>Sancreek</option>
+<option>Satisfy</option>
+<option>Shojumaru</option>
+<option>Shrikhand</option>
+<option>Sigmar One</option>
+<option>Six Caps</option>
+<option>Slackey</option>
+<option>Special Elite</option>
+<option>Syncopate</option>
+<option>Tangerine</option>
+<option>Trade Winds</option>
+<option>Ultra</option>
+<option>Uncial Anciqua</option>
+<option>Vast Shadow</option>
+<option>Wallpoet</option>
+<option>Walter Turncoat</option>
+<option>Wendy One</option>
+<option>Yellowtail</option>
+<option>Yeseva One</option>
+
+</select>&nbsp; <b><font size="4"><font color="#FFFFFF">Cor:</font>&nbsp;</font></b><input type="text" name="a3" size="24" style="color: #800000; font-weight: bold"></p>
+
+
+  <p align="center">
+  <font color="#FFFFFF"><b><font size="4">Tamanho:</font></b> </font>&nbsp;<input type="text" name="a4" size="16" style="color: #800000; font-weight: bold" value="60"></p>
+
+
+  <p align="center">
+  &nbsp;</p>
+
+
+  </p>
+
+<p align="center">
+ <input type='submit' name='btnEnviarDados' value='Enviar' style="font-size: 24 pt">
+   
+<p align="center">
+ &nbsp;</form>
+</p>
+</td>
+    </tr>
+  </table>
+  </center>
+</div>
+<p align="center">
+<p align="center"><b><font size="4">Em texto você escreve a palavra que desejar 
+| Em fonte escolha o nome na opção veja os 
+exemplos abaixo</font></b></p>
+<p align="center"><b><font size="4">Em cor você pode colocar o nome, o numero ou 
+o código da cor 
+da lista abaixo | Em tamanho digite o tamanho da fonte </font></b></p>
+<p align="center">
+<iframe name="mostra" width="1189" height="203" border="0" frameborder="0" align="middle">
+</iframe></p>
+<p align="center">
+<iframe name="I1" width="500" height="350" src="http://www.livropublicado.com.br/fontes.htm" border="0" frameborder="0">
+</iframe>
+<iframe name="I2" src="http://www.livropublicado.com.br/cores.htm" width="500" height="350" border="0" frameborder="0">
+</iframe></p>
 <option>Eagle Lake</option>
 <option>Ewert</option>
 <option>Fascinate Iline</option>
