--- a/gerandotexto.htm
+++ b/gerandotexto.htm
@@ -8,8 +8,16 @@
 
 <div align="center">
   <center>
-  <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="50%">
+  <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="57%">
     <tr>
+      <td width="100%" background="http://www.armor-chimie.fr/IMG/jpg/ORANGE_DEVES_1233.jpg">
+<p align="center"><b><font size="4">Em <font color="#FFFFFF">Texto </font>você escreve a palavra que desejar 
+| Em <font color="#FFFFFF">Fonte</font> escolha o nome na opção veja os 
+exemplos abaixo</font></b></p>
+<p align="center"><b><font size="4">Em <font color="#FFFFFF">Cor</font> você pode colocar o nome, o numero ou 
+o código da cor 
+da lista abaixo | Em <font color="#FFFFFF">Tamanho</font> digite o tamanho da fonte </font></b></p>
+      <p>&nbsp;</td>
       <td width="100%" background="http://www.armor-chimie.fr/IMG/jpg/ORANGE_DEVES_1233.jpg">
       <p align="center"><form name='formulario' method='get' action='http://baixargospelfacil.esy.es/gerandotexto.php'>
   <p align="center">
@@ -132,7 +140,8 @@
 <option>Yellowtail</option>
 <option>Yeseva One</option>
 
-</select>&nbsp; <b><font size="4"><font color="#FFFFFF">Cor:</font>&nbsp;</font></b><input type="text" name="a3" size="24" style="color: #800000; font-weight: bold"></p>
+</select>&nbsp; <b><font size="4"><font color="#FFFFFF">Cor:</font> </font></b>
+  <input type="text" name="a3" size="24" style="color: #800000; font-weight: bold"></p>
 
 
   <p align="center">
@@ -146,10 +155,8 @@
   </p>
 
 <p align="center">
- <input type='submit' name='btnEnviarDados' value='Enviar' style="font-size: 24 pt">
-   
-<p align="center">
- &nbsp;</form>
+ <input type='submit' name='btnEnviarDados' value='Enviar' style="font-size: 18 pt; color: #C0C0C0; border: 2px solid #FFFFFF; padding-left: 4; padding-right: 4; padding-top: 1; padding-bottom: 1">
+   </form>
 </p>
 </td>
     </tr>
@@ -157,14 +164,8 @@
   </center>
 </div>
 <p align="center">
-<p align="center"><b><font size="4">Em texto você escreve a palavra que desejar 
-| Em fonte escolha o nome na opção veja os 
-exemplos abaixo</font></b></p>
-<p align="center"><b><font size="4">Em cor você pode colocar o nome, o numero ou 
-o código da cor 
-da lista abaixo | Em tamanho digite o tamanho da fonte </font></b></p>
 <p align="center">
-<iframe name="mostra" width="1189" height="203" border="0" frameborder="0" align="middle">
+<iframe name="mostra" width="100%" height="40%" border="0" frameborder="0" align="middle">
 </iframe></p>
 <p align="center">
 <iframe name="I1" width="500" height="350" src="http://www.livropublicado.com.br/fontes.htm" border="0" frameborder="0">
