--- a/gerandotexto.htm
+++ b/gerandotexto.htm
@@ -8,17 +8,9 @@
 
 <div align="center">
   <center>
-  <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="57%">
+  <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="51%">
     <tr>
-      <td width="100%" background="http://www.armor-chimie.fr/IMG/jpg/ORANGE_DEVES_1233.jpg">
-<p align="center"><b><font size="4">Em <font color="#FFFFFF">Texto </font>você escreve a palavra que desejar 
-| Em <font color="#FFFFFF">Fonte</font> escolha o nome na opção veja os 
-exemplos abaixo</font></b></p>
-<p align="center"><b><font size="4">Em <font color="#FFFFFF">Cor</font> você pode colocar o nome, o numero ou 
-o código da cor 
-da lista abaixo | Em <font color="#FFFFFF">Tamanho</font> digite o tamanho da fonte </font></b></p>
-      <p>&nbsp;</td>
-      <td width="100%" background="http://www.armor-chimie.fr/IMG/jpg/ORANGE_DEVES_1233.jpg">
+      <td width="200%" background="http://www.armor-chimie.fr/IMG/jpg/ORANGE_DEVES_1233.jpg">
       <p align="center"><form name='formulario' method='get' action='http://baixargospelfacil.esy.es/gerandotexto.php'>
   <p align="center">
   &nbsp;</p>
@@ -155,7 +147,7 @@ da lista abaixo | Em <font color="#FFFFFF">Tamanho</font> digite o tamanho da fo
   </p>
 
 <p align="center">
- <input type='submit' name='btnEnviarDados' value='Enviar' style="font-size: 18 pt; color: #C0C0C0; border: 2px solid #FFFFFF; padding-left: 4; padding-right: 4; padding-top: 1; padding-bottom: 1">
+ <input type='submit' name='btnEnviarDados' value='Enviar' style="font-size: 18 pt; color: #800000; font-weight: bold; border: 2px solid #FFFFFF; padding-left: 4; padding-right: 4; padding-top: 1; padding-bottom: 1">
    </form>
 </p>
 </td>
@@ -165,10 +157,14 @@ da lista abaixo | Em <font color="#FFFFFF">Tamanho</font> digite o tamanho da fo
 </div>
 <p align="center">
 <p align="center">
-<iframe name="mostra" width="100%" height="40%" border="0" frameborder="0" align="middle">
-</iframe></p>
 <p align="center">
-<iframe name="I1" width="500" height="350" src="http://www.livropublicado.com.br/fontes.htm" border="0" frameborder="0">
-</iframe>
-<iframe name="I2" src="http://www.livropublicado.com.br/cores.htm" width="500" height="350" border="0" frameborder="0">
+<p align="center"><b><font size="4">Em Texto você escreve a palavra que desejar 
+| Em Fonte escolha o nome na opção veja os 
+exemplos abaixo</font></b></p>
+<p align="center"><b><font size="4">Em Cor você pode colocar o nome, o numero ou 
+o código da cor 
+da lista abaixo | Em Tamanho digite o tamanho da fonte </font></b></p>
+<p align="center">
+<p align="center">
+<iframe name="mostra" width="100%" height="73%" border="0" frameborder="0" align="middle" src="http://www.livropublicado.com.br/exemplos.htm">
 </iframe></p>
