--- a/gerandotexto.htm
+++ b/gerandotexto.htm
@@ -163,8 +163,9 @@
 exemplos abaixo</font></b></p>
 <p align="center"><b><font size="4">Em Cor você pode colocar o nome, o numero ou 
 o código da cor 
-da lista abaixo | Em Tamanho digite o tamanho da fonte </font></b></p>
+da lista abaixo | Em Tamanho digite o tamanho da fonte |
+<a href="http://www.livropublicado.com.br/exemplos.htm">Voltar</a></font></b></p>
 <p align="center">
 <p align="center">
-<iframe name="mostra" width="100%" height="73%" border="0" frameborder="0" align="middle" src="http://www.livropublicado.com.br/exemplos.htm">
+<iframe name="mostra" width="100%" height="73%" border="0" frameborder="0" align="middle" src="http://www.livropublicado.com.br/exemplos.htm" scrolling="no">
 </iframe></p>
