--- a/gerandotexto.htm
+++ b/gerandotexto.htm
@@ -10,7 +10,7 @@
   <center>
   <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="51%">
     <tr>
-      <td width="200%" background="http://www.armor-chimie.fr/IMG/jpg/ORANGE_DEVES_1233.jpg">
+      <td width="200%" background="https://pixabay.com/static/uploads/photo/2015/05/02/15/34/course-750061_960_720.jpg">
       <p align="center"><form name='formulario' method='get' action='http://baixargospelfacil.esy.es/gerandotexto.php'>
   <p align="center">
   &nbsp;</p>
@@ -148,6 +148,12 @@
 
 <p align="center">
  <input type='submit' name='btnEnviarDados' value='Enviar' style="font-size: 18 pt; color: #800000; font-weight: bold; border: 2px solid #FFFFFF; padding-left: 4; padding-right: 4; padding-top: 1; padding-bottom: 1">
+   
+<p align="center">
+ <b><font style="font-size: 16pt"><font color="#FFFF00">Cores mais usadas:</font> <font color="#FFFFFF">
+ white -</font>Black<font color="#FFFFFF"> - </font><font color="#0000FF">Blue</font> 
+ - <font color="#FF0000">Red</font> - <font color="#008000">Green</font> -
+ <font color="#FFFF00">Yellow</font>&nbsp; </font></b>
    </form>
 </p>
 </td>
