--- a/gerandotexto.htm
+++ b/gerandotexto.htm
@@ -10,7 +10,7 @@
   <center>
   <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="51%">
     <tr>
-      <td width="200%" background="https://pixabay.com/static/uploads/photo/2015/05/02/15/34/course-750061_960_720.jpg">
+      <td width="200%" background="https://s-media-cache-ak0.pinimg.com/originals/c8/82/1a/c8821a8d59daf337d51776cf8a36f4c9.jpg">
       <p align="center"><form name='formulario' method='get' action='http://baixargospelfacil.esy.es/gerandotexto.php'>
   <p align="center">
   &nbsp;</p>
