--- a/gerandotexto.htm
+++ b/gerandotexto.htm
@@ -10,7 +10,7 @@
   <center>
   <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="51%">
     <tr>
-      <td width="200%" background="https://s-media-cache-ak0.pinimg.com/originals/c8/82/1a/c8821a8d59daf337d51776cf8a36f4c9.jpg">
+      <td width="200%" background="http://4.bp.blogspot.com/-4SHsamqjaKQ/U5ILVYfVQ0I/AAAAAAAADyo/f185JxqqC90/s1600/gradiente-office-como-usar-michael-jackson-apenas-um-show.PNG">
       <p align="center"><form name='formulario' method='get' action='http://baixargospelfacil.esy.es/gerandotexto.php'>
   <p align="center">
   &nbsp;</p>
