--- a/gerandotexto.htm
+++ b/gerandotexto.htm
@@ -5,6 +5,8 @@
 
 <base target="mostra">
 
+<p align="center">
+<img border="0" src="http://www.livropublicado.com.br/images/image001.png" width="100%" height="60%"></p>
 
 <div align="center">
   <center>
