--- a/gerandotexto.htm
+++ b/gerandotexto.htm
@@ -5,8 +5,7 @@
 
 <base target="mostra">
 
-<p align="center">
-<img border="0" src="http://www.livropublicado.com.br/images/image001.png" width="100%" height="60%"></p>
+<img border="0" src="http://www.livropublicado.com.br/images/image001.png" width="42%" height="25%" align="left">
 
 <div align="center">
   <center>
