--- a/gerandotexto.htm
+++ b/gerandotexto.htm
@@ -4,8 +4,10 @@
 <title>Gerando Texto</title>
 
 <base target="mostra">
+<p>
+<a target="_blank" href="http://www.livropublicado.com.br/">
+<img border="0" src="http://www.livropublicado.com.br/images/image001.png" width="300" height="78" align="left"></a></p>
 
-<img border="0" src="http://www.livropublicado.com.br/images/image001.png" width="42%" height="25%" align="left">
 
 <div align="center">
   <center>
