--- a/tabela_de_preco.htm
+++ b/tabela_de_preco.htm
@@ -16,7 +16,7 @@
 			<p align="center">
 			<section id="header" class="dark">
 				<header>
-					<a href="http://www.livropublicado.com.br/">
+					<center><a href="http://www.livropublicado.com.br/">
 <img border="0" src="http://www.livropublicado.com.br/images/image001.png" width="90%" height="238%"></a></header></section></p>
 
 			<p align="center"><b><font color="#800000" size="6">SERVIÇOS EDITORIAIS.  </font>
