--- a/1.htm
+++ b/1.htm
@@ -34,6 +34,8 @@
 <img src="http://www.livropublicado.com.br/images/39.png" width="220" height="187">
 <img src="http://www.livropublicado.com.br/images/40.png" width="220" height="187">
 </p>
+  <p align="center"><b><font size="5" face="Bradley Hand ITC" color="#0000FF">
+<a target="_self" href="http://www.livropublicado.com.br/2.htm">Mais</a></font></b></p>
 </body>
 
 </html>
