--- a/4.htm
+++ b/4.htm
@@ -35,6 +35,8 @@
 <img src="http://www.livropublicado.com.br/images/100.png" width="220" height="187">
 
 </p>
+  <p align="center"><b><font size="5" face="Bradley Hand ITC" color="#0000FF">
+<a target="_self" href="http://www.livropublicado.com.br/5.htm">Mais</a></font></b></p>
 </body>
 
 </html>
