--- a/url/fundo19.htm
+++ b/url/fundo19.htm
@@ -4,8 +4,4 @@ Copie este link abaixo</span><span style="color: rgb(68, 68, 68); font-family: R
 </span></p>
 <p align="center">
 <span style="color: rgb(68, 68, 68); font-family: Roboto, Helvetica, Arial, sans-serif; font-size: 13px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; display: inline !important; float: none;">
-<a href="https://goo.gl/MY1JQe">https://goo.gl/MY1JQe</a></span></p>
-<p align="center">&nbsp;</p>
-<p align="center">&nbsp;</p>
-<p align="center">&nbsp;</p>
-<p align="center">&nbsp;</p>
+<a href="https://goo.gl/MY1JQe">https://goo.gl/2qNYV8</a></span></p>
