--- a/galeria/demo.html
+++ b/galeria/demo.html
@@ -34,7 +34,7 @@
             Galereya
         </footer>
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script src="http://www.livropublicado.com.br/galeria/images.json"></script>
         <script>window.jQuery || document.write('<script src="js/jquery-1.9.1.min.js"><\/script>')</script>
         <script src="../src/js/jquery.galereya.js"></script>
         <script>
