--- a/galeria/demo/demo.html
+++ b/galeria/demo/demo.html
@@ -8,9 +8,9 @@
         <title>Galereya. Demo.</title>
 
         <link href='http://fonts.googleapis.com/css?family=Scada:400,400italic,700,700italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="../src/css/jquery.galereya.css">
+        <link rel="stylesheet" href="..galeria//src/css/jquery.galereya.css">
         <!--[if lt IE 9]>
-        <link rel="stylesheet" href="../src/css/jquery.galereya.ie.css">
+        <link rel="stylesheet" href="..galeria//src/css/jquery.galereya.ie.css">
         <![endif]-->
         <style>
             body {
@@ -39,7 +39,7 @@
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/jquery-1.9.1.min.js"><\/script>')</script>
-        <script src="../src/js/jquery.galereya.js"></script>
+        <script src="..galeria//src/js/jquery.galereya.js"></script>
         <script>
             $(function() {
                 $('#gallery').galereya({
