--- a/top.htm
+++ b/top.htm
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Language" content="pt-br">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <title>Nova pagina 3</title>
-<base target="conteúdo">
+<base target="conteÃºdo">
 </head>
 
 <body topmargin="2">
@@ -14,7 +14,7 @@
   <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111" width="100%">
     <tr>
       <td width="100%" align="center">
-      <img src="../../../../Documents/Minhas%20Webs/image001.png" width="280" height="81"><img border="0" src="../../../../Documents/Minhas%20Webs/galeria_imagem_do_alto.png" width="541" height="77"></td>
+      <img src="http://www.livropublicado.com.br/images/logotopo.png" width="280" height="74"><img border="0" src="http://www.livropublicado.com.br/images/galeria_imagem_do_alto.png" width="280" height="39"></td>
     </tr>
   </table>
   </center>
