--- a/index.html
+++ b/index.html
@@ -1,52 +1,288 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <meta charset="utf-8">
+	<head>
+
+    <meta name="Keywords" content="Gospel, livro, evangélico, brasil, português, crente, capa, editora, escritor, profeta manoel bezerra, damares, literatura, literaria, pagina, escritora, e-book, facil, baixar, download, audiobook, pdf, autor, autora, autores"/>
+    <meta name="Author" content="Profeta Manoel Bezerra"/>
+<meta name="Reply-To" content="manoel@arquivocristao.com.br"/>
+<meta name="Copyright" content="Editora Unidecristo"/>
+<meta http-equiv="Content-Language" content="PT"/>
+<meta name="Distribution" content="Global"/>
+<meta name="Revisit-After" content="3 Days"/>
+<meta name="Rating" content="General"/>
+   <meta http-equiv="Content-Language" content="pt-br">
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Editora Unidecristo by EditoraFacil</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="ROBOTS" content="NOINDEX, NOFOLLOW"/>
+    <meta name="description" content="Nunca foi tão fácil publicar um livro"/>
+<meta property="og:title" content="Editora Unidecristo te ajuda"/>
+<meta property="og:description" content="Nunca foi tão fácil publicar um livro"/>
+<meta property="og:site_name" content="Editora Unidecristo"/>
+<meta property="og:type" content="video.movie"/>
+<meta property="og:video:width" content="300"/>
+<meta property="og:video:height" content="50"/>
+<meta property="video:duration" content="400"/>
+<meta property="og:video:type" content="application/x-shockwave-flash"/>
+<meta property="og:image" content="http://www.livropublicado.com.br/images/logomenor.png"/>
+<meta property="twitter:card" content="player"/>
+<meta property="twitter:site" content="@editoraunidecristo"/>
+<meta property="twitter:description" content="Nunca foi tão fácil publicar um livro"/>
+<meta property="twitter:title" content="Editora Unidecristo te ajuda"/>
+<meta property="twitter:url" content="http://www.livropublicado.com.br/"/>
+<meta property="twitter:image" content="http://www.livropublicado.com.br/images/logomenor.png"/>
 
-  </head>
-  <body>
+<link rel="shortcut icon" type="image/x-icon" href="https://avatars3.githubusercontent.com/u/21023433?v=3&s=200">
+<!--
+	Spectral by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+		<title>Editora Unidecristo</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body class="landing">
 
-      <header>
-        <h1>Editora Unidecristo</h1>
-        <p>VocÃª vai ser escritor agora!</p>
-      </header>
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
 
-      <div id="banner">
-        <span id="logo"></span>
+				<!-- Header -->
+					<header id="header" class="alt">
+						<h1><a href="index.html">Editora unidecristo</a></h1>
+						<nav id="nav">
+							<ul>
+								<li class="special">
+									<a href="#menu" class="menuToggle"><span>Menu</span></a>
+									<div id="menu">
+										<ul>
+											<li><a href="index.html">Home</a></li>
+											<li><a href="gerador.html">Gerador</a></li>
+											<li><a href="autores.html">Autores</a></li>
+										</ul>
+									</div>
+								</li>
+							</ul>
+						</nav>
+					</header>
 
-        <a href="https://github.com/EditoraFacil/SeuLivro" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/EditoraFacil/SeuLivro/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/EditoraFacil/SeuLivro/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
+				<!-- Banner -->
+					<section id="banner">
+						<div class="inner">
+							<h2>
+			<section id="header0" class="dark">
+				<header>
+					        Bem vindos ao site da Editora Unidecristo</header></section></h2>
+							<p>
+			&nbsp;</p>
+							<p>
+			&nbsp;</p>
+							<p>
+			<section id="header1" class="dark">
+				<header>
+                            Aqui você poderá vê os livros publicados dos nossos autores. E 
+                    vai descobrir como é fácil ser um escritor de sucesso.</header></section></p>
+							<p>&nbsp;</p>
+							
+						</div>
+						<a href="#one" class="more scrolly">Prossiga</a>
+					</section>
 
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
-        <p>Seu livro aqui</p>
-      </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/EditoraFacil">EditoraFacil</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
-      </footer>
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+				<!-- One -->
+					<section id="one" class="wrapper style1 special">
+						<div class="inner">
+							<header class="major">
+								<h2>
+			<section id="first" class="main">
+				<header>
+                                Nunca foi tão fácil publicar um livro, mas se você 
+                        não obter ajuda caso não tenha condições financeiras 
+                        isso se torna muito difícil, por isso decidimos criar a opção 
+                        de facilitar muito mais, podemos prestar serviço 
+                        editorial por um preço irrisório e parcelado, publicar 
+                        os seus livros com qualidade pelo menor preço, te ajudar, vender os 
+                        seus exemplares em nossa livraria virtual e criar um site exclusivo e gratuito 
+                        para você.</header></section></h2>
+                        <p>
+                    <img src="https://cdn.awsli.com.br/300x300/346/346370/produto/11628324/64a4545c46.jpg" width="199" height="300">
+                    <img src="https://cdn.awsli.com.br/300x300/346/346370/produto/11052887/07134b6b83.jpg" alt="Resultado de imagem para deus me perdoe profeta manoel" width="212" height="300">
+                    <img src="https://cdn.awsli.com.br/300x300/346/346370/produto/11237954/e0f87ab7bb.jpg" alt="Resultado de imagem para livraria arquivo cristão" width="212" height="300">
+                    <img src="https://cdn.awsli.com.br/300x300/346/346370/produto/11210484/7c0c3bb0cf.jpg" alt="Resultado de imagem para livraria arquivo cristão" width="212" height="300">
+                    <img src="https://cdn.awsli.com.br/300x300/346/346370/produto/11549845/d1166ea64a.jpg" width="211" height="300">
+                    <img src="https://cdn.awsli.com.br/300x300/346/346370/produto/11179799/b83cf65923.jpg" width="211" height="300"></p>
+
+								<p>Venha fazer parte do nosso grupo de autores<br />
+								logo o seu livro estará neste espaço de novidades atuais.</p>
+							</header>
+							<ul class="icons major">
+								<li><span class="icon fa-diamond major style1"><span class="label">
+                                Lorem</span></span></li>
+								<li><span class="icon fa-heart-o major style2"><span class="label">
+                                Ipsum</span></span></li>
+								<li><span class="icon fa-code major style3"><span class="label">
+                                Dolor</span></span></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Two -->
+					<section id="two" class="wrapper alt style2">
+						<section class="spotlight">
+							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+								<h2>Tudo com super qualidade </h2>
+								<p>&nbsp;DIGITAÇÃO, REVISÃO, DIAGRAMAÇÃO E <br>
+                                FORMATAÇÃO, ARTE DA CAPA, TODO O PROCESSO DE <br>
+                                EDITORAÇÃO. TEMOS UM EDITOR ESPECIAL PARA VOCÊ 
+                                FAZER UM RASCUNHO DA CAPA ASSIM VAMOS CRIAR UMA 
+                                CAPA <br>
+                                PROFISSIONAL DO JEITO QUE VOCÊ QUISER COM 
+                                CONTRA-CAPA E ORELHAS.</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+								<h2>Publicamos o seu livro</h2>
+								<p>DISPONIBILIZAMOS OS LIVROS PRONTOS EM 
+                                QUALQUER CIDADE DO BRASIL, PEDIDOS A PARTIR DE 
+                                50 UNIDADES COM O MELHOR <br>
+                                PREÇO QUE PODERÁ SER PARCELADO.</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+								<h2>Divulgamos todos os nossos escritores</h2>
+								<p>PARA OS NOSSOS ESCRITORES DISPONIBILIZAMOS UM 
+                                SITE EXCLUSIVO E DE FÁCIL EDIÇÃO, COLOCAMOS O 
+                                SEU LIVRO EM NOSSA LIVRARIA VIRTUAL. E VAMOS 
+                                LHES AJUDAR DANDO MUITAS DICAS DE DIVULGAÇÃO.</p>
+							</div>
+						</section>
+					</section>
+
+				<!-- Three -->
+					<section id="three" class="wrapper style3 special">
+						<div class="inner">
+							<header class="major">
+								<h2>super promoção por tempo limitado: Todo o 
+                                serviço editorial de sua literatura + 50 livros 
+                                de até 170 páginas</h2>
+								<p> Temos uma Super Promoção para os novos autores: Todo o 
+                        serviço de editoração por R$ 1,500.00 (Mil e quinhentos 
+                        reais) e ainda você vai receber 50 exemplares do seu 
+                        próprio livro na sua casa quando ficar pronto presente 
+            da Editora Unidecristo. Estamos 
+                        te oferecendo tudo isso parcelado em 3X. um deposito 
+                        bancário e dois boletos, parcelas de R$ 500.00 (Quinhentos 
+                        reais).  </p>
+								<p> Temos a opção de pagamento no cartão em até 12 
+            vezes sem entrada, veja a tabela de preço. Para ver
+            <a href="http://www.livropublicado.com.br/tabela_de_preco.htm"></a><a target="_blank" href="http://www.livropublicado.com.br/tabela_de_preco.htm">Clique 
+            aqui</a>.</p>
+							</header>
+							<ul class="features">
+								<li class="icon fa-paper-plane-o">
+									<h3>Editamos:</h3>
+									<p style="text-align: center">Temos profissionais que farão do seu 
+                                    livro a arte da beleza e entretenimento que 
+                                    todos os leitores adoram.<section id="second0" class="main"><a href="#" class="image fit"><img src="https://i.snag.gy/vjwUVe.jpg" title="Capa completa livro Frases de Gaby" width="80%" height="60%" /></a></section></p>
+								</li>
+								<li class="icon fa-laptop">
+									<h3>Publicamos</h3>
+									<p style="text-align: center">Livros com qualidade contendo código de barras 
+                                    e QR. Satisfação para você, seus leitores e 
+                                    facilidades para os pontos de venda.<section id="second1" class="main"><a href="#" class="image fit"><img src="https://i.snag.gy/mfHNyr.jpg" title="Capa completa Deus Me Perdoe" width="80%" height="60%" /></a></section></p>
+								</li>
+								<li class="icon fa-code">
+									<h3>Divulgamos</h3>
+									<p style="text-align: center">No nosso site, no site que criamos para cada autor, nas redes sociais com centenas de grupos e dezenas de paginas.
+<section id="second1" class="main"><a target="_blank" href="http://www.facebook.com/ArquivoEvangelico/">
+                                    <img src="https://i.imgur.com/ryZDBIA.png" alt="Resultado de imagem para sistema audio cristao" width="377" height="148"></a></section></p>
+								</li>
+								<li class="icon fa-headphones">
+									<h3>Vendemos</h3>
+									<p style="text-align: center">Temos muitas opções de venda para o seu livro nas redes sociais no site que vamos criar para te e na nossa WEB loja Livraria Arquivo 
+Cristão.<section id="second1" class="main"><a target="_blank" href="http://livraria.arquivocristao.com.br/"><img src="https://cdn.awsli.com.br/360x1140/346/346370/banner/42a33eafee.png" width="316" height="189"></a></section></p>
+								</li>
+								<li class="icon fa-heart-o">
+									<h3>dizimamos</h3>
+									<p>Os serviços e a venda do seu livro dá 
+                                    direito ao dizimo nosso para a sua igreja, 
+                                    assim que você concretizar o ultimo 
+                                    pagamento vamos te enviar um vale de 10% 
+                                    para você entregar ao responsável da sua 
+                                    igreja.</p>
+								</li>
+								<li class="icon fa-flag-o">
+									<h3>suporte</h3>
+									<p>Estaremos a disposição para tirar duvidas 
+                                    e ajudar nas dicas de divulgação, 
+                                    lançamentos e venda direta com boletos e 
+                                    cartões, entre outras informações, por 
+                                    e-mail, telefone e whatsapp.</p>
+								</li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- CTA -->
+					<section id="cta" class="wrapper style4">
+						<div class="inner">
+							<header>
+								<h2>Quer começar agora?</h2>
+			<section id="second" class="main">
+								<section>
+									<p>  Primeiro você deve estar com o seu arquivo em DOC, DOCX, TXT, ODT, etc. Isso que dizer, digitado e em formato de texto, 
+                                    esta 
+                                    promoção não está a opção manuscrito mas podemos fazer um acordo a parte sendo o seu caso.</p>
+									<p>Depois junte este arquivo com um rascunho da capa para que possamos ter uma 
+                                    ideia de como realizar a arte, aqui temos  amostras de algumas capas e caso queira usar o nosso gerador de rascunho 
+                                    você pode criar.</p>
+									<p>Envie tudo em uma pasta para o Profeta Manoel Bezerra pelo e-mail:&nbsp;manoel@arquivocristao.com.br e 
+                                    aguarde contato para realização da entrada.</section></section></p>
+							</header>
+							<ul class="actions vertical">
+								<li>
+                                <a class="button fit special" target="_top" href="gerador.html">gerador
+                                </a></li>
+								<li><a class="button fit" href="gerador.html">Leia mais</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<ul class="icons">
+							<li><span class="label">
+                            <a class="icon fa-twitter" target="_blank" href="https://twitter.com/LivrariaAudio">Twitter</a></span></li>
+							<li><span class="label">
+                            <a class="icon fa-facebook" target="_blank" href="http://www.facebook.com/EditoraUnidecristo/">Facebook</a></span></li>
+							<li><span class="label">
+                            <a class="icon fa-instagram" href="http://www.instagram.com/unidecristo/">Instagram</a></span></li>
+							<li><span class="label">
+                            <a class="icon fa-dribbble" href="https://dribbble.com/EditoraUnidecristo">Dribbble</a></span></li>
+							<li><span class="label">
+                            <a class="icon fa-envelope-o" href="mailto:manoel@aquivocristao.com.br?subject=Contato">Email</a></span></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Untitled</li><li>deus é amor</li>
+						</ul>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script>
+                                <![endif]-->
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
